Fix for the pagination alignment as per the new wrapper added.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -2186,7 +2186,7 @@ If the height and width are not specified the video takes the height of the post
 .app-datanavigator {
   position: relative;
   overflow-y: auto;
-  ul.pagination, ul.pager {
+  ul.pagination, ul.pager, .pagination {
     margin : 0;
     & > li.pagecount > a {
       width: 4em;
@@ -2213,7 +2213,7 @@ If the height and width are not specified the video takes the height of the post
       zoom: 80%;
     }
   }
-  ul.pagination {
+  ul.pagination, .pagination {
     &.basic {
       &.pagination-sm {
         .pagination-prev, .pagination-next, .pagination-first, .pagination-last {
